# bannedcamp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.nix  flake.nix
.github/workflows/: release.yml  test.yml
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  completions.rs  download.rs  mod.rs  run.rs
src/core/: auth.rs  client.rs  download.rs  library.rs  mod.rs  utils.rs
src/tui/: app.rs  async_bridge.rs  event.rs  mod.rs  run.rs  ui.rs
src/tui/screens/: download.rs  library.rs  login.rs  mod.rs
src/tui/widgets/: spinner.rs
tests/: integration.rs
