[package]
name = "bannedcamp"
version = "1.1.0"
edition = "2024"
description = "Bandcamp library downloader"
license = "MIT"
repository = "https://github.com/BatteredBunny/bannedcamp"

[[bin]]
name = "bannedcamp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
clap_complete = "4.5.66"
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["cookies", "stream", "json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zip = "8.1.0"
indicatif = "0.18.4"
url = "2.5.8"
