[package]
name = "bannedcamp"
version = "1.2.0"
edition = "2024"
description = "Bandcamp library downloader"
license = "MIT"
repository = "https://github.com/BatteredBunny/bannedcamp"

[[bin]]
name = "bannedcamp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
clap_complete = "4.6.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.18"
reqwest = { version = "0.13.2", features = ["cookies", "stream", "json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zip = "8.5.1"
indicatif = "0.18.4"
url = "2.5.8"

[dev-dependencies]
tempfile = "3.27.0"
